Made it so there is less hard coded stuff in MangoBotLaunchTarget...